--- a/static/projects.html
+++ b/static/projects.html
@@ -24,6 +24,9 @@
     <nav class="navbar sticky-top navbar-dark bg-success">
       <a class="navbar-brand dark" href="#"><i class="fa fa-pencil-square" aria-hidden="true"></i> Wryt.io</a>
       <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary" id="importData" title="Import Data">
+          <i class="fa fa-upload" aria-hidden="true"></i>
+        </button>
         <button type="button" class="btn btn-secondary" title="Add Project" data-toggle="modal" data-target="#addProject" onclick="resetAddProjectForm()">
           <i class="fa fa-plus-circle" aria-hidden="true"></i>
         </button>
