--- a/static/projects.html
+++ b/static/projects.html
@@ -53,6 +53,18 @@
         </button>
       </div>
     </nav>
+    <noscript><div class="container mt-4">
+      <!-- Row for Avg Graph-->
+      <div class="row row-cols-12">
+        <div class="col">
+          <div id="noscript-error">
+            <div class="alert alert-danger" role="alert">
+              <div class="error-text">Error: Javascript is disabled; </br> Javascript is required for this website to function - please enable Javascript.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div></noscript>
     <div class="container mt-4">
       <!-- Row for Avg Graph-->
       <div class="row row-cols-12">
