card-10: Implemented Settings w/ colour and theme changer,

--- a/static/landing.html
+++ b/static/landing.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="projects.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css" 
-    integrity="sha384-nNK9n28pDUDDgIiIqZ/MiyO3F4/9vsMtReZK39klb/MtkZI3/LtjSjlmyVPS3KdN" crossorigin="anonymous">
+    <link rel="stylesheet" id="themeStylesheetLight" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css" integrity="sha384-qF/QmIAj5ZaYFAeQcrQ6bfVMAh4zZlrGwTPY7T/M+iTTLJqJBJjwwnsE5Y0mV7QK" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css"
       integrity="sha512-/zs32ZEJh+/EO2N1b0PEdoA10JkdC3zJ8L5FTiQu82LR9S/rOQNfQN7U59U9BC12swNeRAz3HSzIL2vpp4fv3w=="
       crossorigin="anonymous" />
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <nav class="navbar sticky-top navbar-dark bg-success">
+    <nav class="navbar sticky-top navbar-dark main-bg-color">
       <a class="navbar-brand dark" href="#"><i class="fa fa-pencil-square" aria-hidden="true"></i> Wryt.io</a>
       <div class="btn-group" role="group" aria-label="Basic example">
         <!-- <button type="button" class="btn btn-secondary" id="login" title="Log In">
@@ -54,16 +54,16 @@
       <div id="content" class="row row-cols-12">
         <div class="col mb-4">
           <div class="card">
-            <div class="card-header text-center text-success"><h2><i class="fa fa-pencil-square" aria-hidden="true"></i> Wryt.io</h2></div>
+            <div class="card-header text-center main-text-color"><h2><i class="fa fa-pencil-square" aria-hidden="true"></i> Wryt.io</h2></div>
             <div class="card-body text-center">
             </br>
-                <h3><p>Project word-count tracking for <span class="typed-text text-success"></span><span class="cursor">&nbsp;</span></p></h3>
+                <h3><p>Project word-count tracking for <span class="typed-text main-text-color"></span><span class="cursor">&nbsp;</span></p></h3>
             </br>
-            <div class="text-justify">Tracking projects and keeping yourself accountable for writing often and at length is hard enough with one project, let alone several. That's why <span class="success">wryt.io</span> is here to help by letting you track all your projects in one place along with a <span class="text-success">cross-project</span> view of how often and how much you've been writing. Because the writing is the important part, tracking your words in a spreadsheet is definitely not.</div>
+            <div class="text-justify">Tracking projects and keeping yourself accountable for writing often and at length is hard enough with one project, let alone several. That's why <span class="main-text-color">wryt.io</span> is here to help by letting you track all your projects in one place along with a <span class="main-text-color">cross-project</span> view of how often and how much you've been writing. Because the writing is the important part, tracking your words in a spreadsheet is definitely not.</div>
             </br>
             </br>
-            <!-- <button type="button" class="btn btn-success" id="signup" title="Sign Up">Sign Up</button> -->
-            <button type="button" class="btn btn-success" id="getstarted" title="Get Started" onClick="location.href='projects.html'">Get Started</button>
+            <!-- <button type="button" class="btn main-bg-color" id="signup" title="Sign Up">Sign Up</button> -->
+            <button type="button" class="btn main-bg-color" id="getstarted" title="Get Started" onClick="location.href='projects.html'">Get Started</button>
             &nbsp;
             <button type="button" class="btn btn-secondary" id="faq" title="FAQ" data-toggle="modal" data-target="#faqModal">FAQ</button>
             </div>
