card-18: Rectifying reload bug.
Rectified reload but by changing the function to jQuery.
Also removed some commented out parts - need to be commented out further.

--- a/static/index.html
+++ b/static/index.html
@@ -231,7 +231,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-              <input type="submit" class="btn main-bg-color" id="ojfOpen" value="Open" onclick="readJsonFile()"/>
+              <input type="submit" class="btn main-bg-color" id="ojfOpen" value="Open" />
             </div>
           </form>
         </div>
